LB_Test/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
spec:
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - image: nginx-2
          name: nginx-2
          ports:
            - containerPort: 80
              name: http
