LB_Test/svc-2.yaml
#kubectl run bb --image=busybox
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx-2
